// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TotalStatistics/> should render component 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="cell confirmed"
    >
      <div
        class="title"
      >
        Confirmed
      </div>
      <div
        data-testid="confirmed"
      />
    </div>
    <div
      class="cell recovered"
    >
      <div
        class="title"
      >
        Recovered
      </div>
      <div
        data-testid="recovered"
      />
    </div>
    <div
      class="cell deaths"
    >
      <div
        class="title"
      >
        Deaths
      </div>
      <div
        data-testid="deaths"
      />
    </div>
  </div>
</div>
`;

exports[`<TotalStatistics/> should render data 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="cell confirmed"
    >
      <div
        class="title"
      >
        Confirmed
      </div>
      <div
        data-testid="confirmed"
      >
        10000
      </div>
    </div>
    <div
      class="cell recovered"
    >
      <div
        class="title"
      >
        Recovered
      </div>
      <div
        data-testid="recovered"
      >
        2000
      </div>
    </div>
    <div
      class="cell deaths"
    >
      <div
        class="title"
      >
        Deaths
      </div>
      <div
        data-testid="deaths"
      >
        1000
      </div>
    </div>
  </div>
</div>
`;
